--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="buffer col-12"></div>
         <section class="text-center col-12">
           <hr>
-          <button class="btn btn-primary btn-xl">Enviar contato</button>
+          <a href="https://victorsouza-mnz.github.io/about-me/"><button class="btn btn-primary btn-xl">about-me</button></a>
         </section>
       </div>
     </div>
